# scriptlets

./: .gitignore  .gitmodules  JavaApplicationStub-OSX  LICENSE  README.md  aosc-build-analyzer.sh  aosc-dpkg2rpm  aosc-git-wiki.sh  aosc-os-dpkg2rpm  aosc-sunxi-builder.sh  aosc-wiki-dumper.py  apt-spy  batch_bump_rel.py  bootstrap-ldc.sh  breaker  build-cross-rustc.bash  chkupdate-anitya-checker.rkt  compare-optenv32.sh  cp-l  cp-wrapper  cpan2ab.pl  dart-sdk-repack.sh  diff-deb.sh  gen-binutils-cross.py  grow-rootfs  kernel-template-postinst  leaves.sql  loongarch-bootstrap  make-jdk-tarball-new.sh  make_chkupdate.py  mkchkupdate  mkfile.sh  mkreleasetorrent.sh  mksvgspcimen.sh  msgrevpair.sh  msgtac.sh  pingus_font.py  pjs-fetch-oracle-jdk.js  pkg-leaves.rkt  pkg-prune.rkt  (+9 more)
OSX-like-bundle/: ExampleAppOpener.sh  README.md
abbs-ci/: bash-check.py
antic/: main.py
aosa-report/: README.md  reporter.py  requirements.txt
aosc-repo-update/: README.md  rebuild.py  update-pkgs.py
aoscava/: Makefile  README.adoc  aoscava
aoscbootstrap/: README.md  aoscbootstrap.pl
breakit/: Cargo.toml
breakit/src/: lib.rs  main.rs  pkgcontents.rs  pkgsite.rs
buildbot-benchmark/: README.md  buildbot-benchmark.bash
buildlog/: buildlog
bump-rel/: README.md  bump-rel
ciel-batch/: README.md  ciel-batch
clean-topics/: aosc-clean-topics.service  main.py
collect-users/: Cargo.toml
collect-users/src/: main.rs
commit-o-matic/: COPYING  README.md  commit-o-matic.sh
commitpacs/: commitpacs
copypac/: copypac
deb-tree/: Cargo.toml
deb-tree/src/: main.rs
debootstrap/: README.md  aosc
distro-preflight-check/: README.md  check-leaked-files.bash
dropit/: dropit
electron/: 0001-v8-fix-build-with-gcc7.patch  0002-WebKit-fix-build-with-gcc7-full.patch  0004-fix-build-on-glibc-2.26.patch  0005-no-bundled-sysroot.patch  0006-gn-bootstrap-fix.patch  0007-libchromiumcontent-settings.patch  additional_patches_list  aosc-electron-builder.sh  collect-abflags.sh
find-deps/: Cargo.toml
find-deps/src/: main.rs
findupd/: README.md  findupd  findupd-stable  rebuild.py  update-pkgs.py
genaffect/: README.md  genaffect
generate-test-queue/: README.md  generate-test-queue
list-affected/: README.md  list-affected
loong64-it/: README.md  loong64-it.bash  loongarch64-it.bash
make-pkgbreak/: README.md  make-pkgbreak
make-rebuilds-list/: README.md  make-rebuilds-list
make-video-samples/: README.md  make-video-samples.bash
mkpkgbreak/: mkpkgbreak
mkrfr/: mkrfr
mktransitionpac/: mktransitionpac
patch-series-rename/: README.md  patch-series-rename
pkgsite-tools/: Cargo.toml  README
pkgsite-tools/src/: cli.rs  lib.rs  main.rs
pkgsite-tools/src/models/: depends.rs  info.rs  mod.rs  rdepends.rs  search.rs
pull-topic-as-local/: README.md  pull-topic-as-local
pushpkg/: README.md  pushpkg  pushpkg.py
pushpkg/completions/: pushpkg.bash  pushpkg.fish
repo-manifest-helper/: README.md  main.py
repo-refresh/: repo-refresh.service  repo-refresh.sh
repository-notifier/: README.md  telegram.py
revoke-leaked-keys/: revoke-leaked-keys.bash
speculator/: README.md  speculator
spiral/: Cargo.toml
spiral/src/: main.rs
translations/: .gitignore  refresh-tp.py  requirements.txt
univt-fonts/: bdflib.py  convert_univt.py  extract_univt.py
unstuck-cargo-qemu-riscv64-static/: README.md  unstuck-cargo-qemu-riscv64-static-auto.sh  unstuck-cargo-qemu-riscv64-static.sh
webrtc-repack/: README.md  make-repack.sh
