[package]
name = "pkgsite-tools"
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["Kaiyang Wu <origincode@aosc.io>"]
description = "Get package information from packages.aosc.io"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
itertools = "0.14"
console = "0.15"
regex = "1.11"
html-escape = "0.2"

[[bin]]
name = "pkgsite"
path = "src/main.rs"
