[package]
name = "spiral"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs-next = "2.0.0"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0.35"
bincode = "1.3.3"
oma-contents = "0.16.0"
fancy-regex = "0.14.0"
simplelog = "0.12.2"
log = "0.4"
rayon = "1.10.0"
